--- a/src/app/sign-up/sign-up.scss
+++ b/src/app/sign-up/sign-up.scss
@@ -41,4 +41,41 @@ main{
     font-weight: 300;
     font-family: 'Montserrat', sans-serif;
   }
+  .link{
+    color: $purple;
+    &:hover{
+      color: $light-purple;
+    }
+  }
+  .oauth{
+    display: flex;
+    gap: 10px;
+    div{
+      background-color: $light-grey;
+      width: 4rem;
+      height: 1px;
+      margin-top: .8rem;
+    }
+  }
+
+  .password-strength {
+    width: 100%;
+    height: .2rem;
+    background-color: #eee;
+    border-radius: 5px;
+    margin-top: 5px;
+  }
+  
+  .strength-bar {
+    height: 100%;
+    border-radius: 10px;
+    transition: width 0.3s ease;
+  }
+  
+  .strength-text {
+    margin-top: 5px;
+    font-size: 14px;
+    color: $grey;
+  }
+  
 }
