--- a/src/app/log-in/log-in.scss
+++ b/src/app/log-in/log-in.scss
@@ -1,5 +1,5 @@
-@import '../styles/globals.scss';
-@import '../styles/mixins.scss';
+@import '../styles/globals';
+@import '../styles/mixins';
 
 
 main{
