--- a/src/app/sign-up/sign-up.scss
+++ b/src/app/sign-up/sign-up.scss
@@ -1,5 +1,5 @@
-@import '../styles/globals.scss';
-@import '../styles/mixins.scss';
+@import '../styles/globals';
+@import '../styles/mixins';
 
 
 main{
