Fixed pages without sidebar and header, added modal window for creating a ticket in future must be added api requests for this

--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -3,8 +3,8 @@ $light-purple: #9479e7;
 $yellow: #f7e78b;
 $light-yellow: #ebdf9b;
 $red: #e23232;
-$black: #060606;
-$grey: #393939;
+$black: #181818;
+$grey: #2c2c2c;
 $light-grey: #a4a4a4;
 $white: #ffffff;
 $green: #6ae16a;
