--- a/src/app/components/components-styles.scss
+++ b/src/app/components/components-styles.scss
@@ -12,7 +12,7 @@ textarea{
 form{
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   gap: 1rem;
   margin-top: 2rem;
   width: 100%;
